--- a/public/views/main.html
+++ b/public/views/main.html
@@ -49,7 +49,7 @@
 
 <div class="tools">
   <h1>SHOPPING TOOLS</h1>
-  <div class="tool"><img class="toolicon" src="./assets/imgs/nut.PNG" ui-sref="build"><b>BUILD YOUR OWN</b></div>
+  <div class="tool" ui-sref="build"><img class="toolicon" src="./assets/imgs/nut.PNG"><a ui-sref="build"><b>BUILD YOUR OWN</b></a></div>
   <div class="tool"><img class="toolicon" src="./assets/imgs/dollar.PNG"><b>SPECIAL OFFERS</b></div>
   <div class="tool"><img class="toolicon" src="./assets/imgs/caricon.PNG"><b>LOCAL INVENTORY</b></div>
   <div class="tool"><img class="toolicon" src="./assets/imgs/dollarbubble.PNG"><b>GET A LOCAL PRICE</b></div>
@@ -68,12 +68,12 @@
 </div>
 
 <div class="content">
-  <div id="left" class="fma3"></div>
-  <div id="mid" class="fma3"></div>
-  <div id="right" class="fma3"></div>
+  <div id="left" class="fma3"><p>Subaru is 2017 Top Brand for Residual Value according to ALG</p></div>
+  <div id="mid" class="fma3"><p>The Newly Redesigned 2018 Outback</p></div>
+  <div id="right" class="fma3"><p>Introducing the REdesigned 2018 Subaru WRX & WRX STI</p></div>
 
-  <div id="lef" class="fma2"></div>
-  <div id="rig"class="fma2"></div>
+  <div id="lef" class="fma2"><p>Meet real owners and see how a Subaru can fit your life</p></div>
+  <div id="rig"class="fma2"></p>Check out what Consumer Reports<br>has to say about Subaru</P></div>
 </div>
 
 <div class="backtotop" onclick="topFunction()" id="myBtn" title="Go to top">
