--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -297,12 +297,13 @@ p
   // background: url("../assets/imgs/impreza.JPG") center 100% no-repeat
 
 .icon
-  height: 40px
-  width: 77px
+  height: 44px
+  width: 85px
   position: absolute
   display: grid
   right: 0
   background-color: inherit
+  top: 10px
 
 .vmodel
   width: 114px
@@ -647,8 +648,8 @@ p
 .carview
   position: fixed
   width: 1000px
-  top: 225px
-  left: 25px
+  top: 210px
+  left: -25px
 
 .cartmain
   width: 100%
@@ -682,7 +683,7 @@ p
   left: -300px
 
 .options
-  height: 3387px
+  height: 3487px
   width: 50%
   right: 0
   position: absolute
@@ -785,30 +786,70 @@ p
 .summary
   height: 620px
   width: 891px
+  position: relative
+  display: inline-flex
+  flex-direction: row
   background-color: black
   color: white
   margin: auto
   opacity: .8
   font-family: sans-serif
 
+.carsum h4
+  height: 50px
+  margin: 0
+  font-family: 14px
+
+.msrp
+  height: 14px
+  width: 200px
+  display: flex
+  flex-direction: row
+
+.msrp h5
+  display: inline-block
+  font-family: 14px
+#leftsum
+  height: 80%
+  width: 50%
+  position: relative
+  display: inline-block
+  margin: 0
+
+#addlist
+  height: 80%
+  width: 50%
+  position: relative
+  display: inline-block
+
+#addlist h3
+  height: 20px
+
+.yourtot
+  height: 19%
+  width: 100%
+  border-top: 1px solid white
+  position: absolute
+  bottom: 0
+
 .shopcon
   height: auto
-  width: 700px
+  width: 100%
   position: relative
   display: inline-flex
   margin: auto
-  border: 1px solid white
   text-align: center
 
 .shop
   height: 130px
-  width: 195px
+  width: 283px
   margin: 0 10px
   position: relative
   background-color: black
   opacity: .8
   display: inline-block
   color: white
+  border-radius: 15px
 
 .shop h5
   height: auto
