--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -839,10 +839,12 @@ p
   display: inline-flex
   margin: auto
   text-align: center
+  border-top: 1px solid white
 
 .shop
   height: 130px
   width: 283px
+  top: 25px
   margin: 0 10px
   position: relative
   background-color: black
@@ -850,6 +852,9 @@ p
   display: inline-block
   color: white
   border-radius: 15px
+
+.shop:hover
+  opacity: 1
 
 .shop h5
   height: auto
@@ -968,6 +973,7 @@ p
   background-size: cover
   z-index: 0
   margin-top: 96px
+  display: inline-block
 
 // .background2
 //   height: 855px
@@ -983,6 +989,7 @@ p
 //   height: 855px
 //   width: 100%
 //   background-color: blue
+
 .fronttext
   height: 100px
   width: 700px
@@ -993,7 +1000,6 @@ p
   font-family: sans-serif
   // border: solid 1px black
   display: flex
-  flex-wrap:
 
 .special
   height: 60px
