--- a/public/views/main.html
+++ b/public/views/main.html
@@ -8,8 +8,9 @@
   </div>
 
 </div> -->
-<div class="owl-carousel">
+<div id="frontcont">
     <div class="front">
+
         <div class="fronttext">
           <h1>Get great offers on 2017 forester & Outback<br>
           Legacy, and Crosstrek models
@@ -25,13 +26,17 @@
         </div>
 
     </div>
+    <span class="front"></span>
+    <span class="front"></span>
+</div>
+  <!-- </div> -->
 
     <!-- <div class="background2"> other img </div> -->
     <!-- <div> Your Content </div>
     <div> Your Content </div>
     <div> Your Content </div> -->
 
-</div>
+
 
 <div class="cars">
 
@@ -73,7 +78,7 @@
   <div id="right" class="fma3"><p>Introducing the REdesigned 2018 Subaru WRX & WRX STI</p></div>
 
   <div id="lef" class="fma2"><p>Meet real owners and see how a Subaru can fit your life</p></div>
-  <div id="rig"class="fma2"></p>Check out what Consumer Reports<br>has to say about Subaru</P></div>
+  <div id="rig"class="fma2"></div>
 </div>
 
 <div class="backtotop" onclick="topFunction()" id="myBtn" title="Go to top">
@@ -101,20 +106,68 @@
 
   </main>
   <script>
-  // window.onscroll = function() {
-  //   scrollFunction()
-  // };
-  // function scrollFunction() {
-  //     if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-  //         document.getElementById("top").style.height = "0";
-  //     }
-  //     else (document.body.scrollTop < 20 || document.documentElement.scrollTop > 20) {
-  //         document.getElementById("top").style.backgroundcolor = "black";
-  //     }
-  // }
+
   function topFunction() {
       document.body.scrollTop = 0; // For Chrome, Safari and Opera
       document.documentElement.scrollTop = 0;
 
   }
+  var frontcont = new Carousel();
+
+  function Carousel("frontcont") {
+  	this.container = document.getElementById("frontcont") || document.body;
+  	this.slides = this.container.querySelectorAll('.front');
+  	this.total = this.slides.length - 1;
+  	this.current = 0;
+
+  	// start on slide 1
+  	this.slide(this.current);
+  }
+  // NEXT
+  // Carousel.prototype.next = function (interval) {
+  // 	(this.current === this.total) ? this.current = 0 : this.current += 1;
+  //
+  // 	this.stop();
+  // 	this.slide(this.current);
+  //
+  // 	if(typeof interval === 'number' && (interval % 1) === 0) {
+  // 		var context = this;
+  // 		this.run = setTimeout(function() {
+  // 			context.next(interval);
+  // 		}, interval);
+  // 	}
+  // };
+  // // PREVIOUS
+  // Carousel.prototype.prev = function (interval) {
+  // 	(this.current === 0) ? this.current = this.total : this.current -= 1;
+  //
+  // 	this.stop();
+  // 	this.slide(this.current);
+  //
+  // 	if(typeof interval === 'number' && (interval % 1) === 0) {
+  // 		var context = this;
+  // 		this.run = setTimeout(function() {
+  // 			context.prev(interval);
+  // 		}, interval);
+  // 	}
+  // };
+  // // STOP PLAYING
+  // Carousel.prototype.stop = function () {
+  // 	clearTimeout(this.run);
+  // };
+  // // SELECT SLIDE
+  // Carousel.prototype.slide = function (index) {
+  // 	if (index >= 0 && index <= this.total) {
+  // 		this.stop();
+  // 		for (var s = 0; s <= this.total; s++) {
+  // 			if (s === index) {
+  // 				this.slides[s].style.display = "inline-block";
+  // 			} else {
+  // 				this.slides[s].style.display = 'none';
+  // 			}
+  // 		}
+  // 	} else {
+  // 		alert("Index " + index + " doesn't exist. Available : 0 - " + this.total);
+  // 	}
+  // };
   </script>
