--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,5 +1,5 @@
 .subaruhome {
-  margin: 11px 0 0 23px;
+  margin: 11px 150px 0 23px;
 	background: url('../assets/imgs/siteimgs.PNG') no-repeat -1px 0;
 	width: 150px;
 	height: 40px;
