--- a/public/views/main.html
+++ b/public/views/main.html
@@ -26,8 +26,8 @@
         </div>
 
     </div>
-    <span class="front"></span>
-    <span class="front"></span>
+    <!-- <span class="front"></span>
+    <span class="front"></span> -->
 </div>
   <!-- </div> -->
 
