--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -867,6 +867,9 @@ p
   position: absolute
   bottom: 0
 
+.yourtot h3
+  position: relative
+
 .shopcon
   height: auto
   width: 100%
@@ -1240,18 +1243,36 @@ p
   text-align: center
   background-color: #EFEFEF
 
+
+
 .textwrapper
   width: 1440px
   height: 75px
   margin: 0 auto
 
 .topscroller
-  height: 70px
-  width: 119px
+  height: 90px
+  width: 150px
   position: relative
   bottom: 0
   margin: 0 auto
   color: #0FA4DC
+
+// .topscroller h3:hover
+//   color: black
+
+.arrowimg
+  height: 40px
+  width: 40px
+  background: url("../assets/imgs/back-to-top.png")
+  border: none
+
+
+.arrowimg:hover
+  height: 40px
+  width: 40px
+  background: url("../assets/imgs/back-to-top-hover.png")
+
 
 .footer
   height: 603px
