--- a/public/views/main.html
+++ b/public/views/main.html
@@ -81,11 +81,13 @@
   <div id="rig"class="fma2"></div>
 </div>
 
-<div class="backtotop" onclick="topFunction()" id="myBtn" title="Go to top">
+<div class="backtotop" id="myBtn" title="Go to top">
   <div class="textwrapper">
     <a>
     <div class="topscroller">
-    <img src="./assets/imgs/back-to-top.png">BACK TO TOP</div>
+    <img class="arrowimg" onclick="topFunction()">
+      <h3>BACK TO TOP</h3>
+    </div>
     </a>
   </div>
 </div>
