--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -666,7 +666,6 @@ p
   width: 100vw
   position: fixed
 
-
 .carview
   position: fixed
   width: 50vw
@@ -829,6 +828,9 @@ p
   margin: auto
   opacity: .8
   font-family: sans-serif
+
+.cartcolor h4
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3)
 
 .carsum h4
   height: 50px
