--- a/public/views/cart.html
+++ b/public/views/cart.html
@@ -53,7 +53,7 @@
       retailer and may differ based on local installation labor costs.</h5>
 
     <h1>Summary</h1>
-    <div class="summary">
+    <div class="summary" >
       <div id="leftsum" class="sumlist">
         <div class="carsum">
           <h4>{{vehicle.model}}</4>
@@ -71,10 +71,8 @@
         <div class="cartcolor" style="color: white">
           <h4>COLOR <span style="color: #0FA4DC ">CHANGE</span></h4>
           <hr style="color: white">
-            <h4>Exteior</h4>
-            {{color.name}}
-            <h4>Interior</h4>
-            <!-- {{vehicle.interior.name}} -->
+            <h4>Exteior - {{color.name}}</h4>
+            <h4>Interior - Standard</h4>            <!-- {{vehicle.interior.name}} -->
         </div>
         <div class="contpackages">
           <h4>Packages</h4>
@@ -98,9 +96,9 @@
 
           </div>
       </div>
-      <div class="yourtot" ng-click="getTotal()">
-        YOUR TOTAL <h3 ng-repeat="price in cart">{{price.accessory.price}}</h3>
-        {{total}}
+      <div class="yourtot">
+        YOUR TOTAL <h3>{{total}}</h3>
+
 
       </div>
     </div>
@@ -123,8 +121,8 @@
     <h5>Legal Disclaimers</h5>
 
     <div class="finalbuild">
-      <div id="price" class="builddets"><h1>${{vehicle.cost}}</h1>TOTAL</div>
-      <div id="checkout" class="builddets"><h3>CHECKOUT</h3></div>
+      <div id="price" class="builddets"><h1>${{total}}</h1>TOTAL</div>
+      <div id="checkout" class="builddets" ng-click="postCart()"><h3>CHECKOUT</h3></div>
       <div id="testd" class="builddets"><h3>SCHEDULE A TEST DRIVE</h3></div>
     </div>
 
