--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -689,6 +689,7 @@ p
   color: white
   opacity: .9
   display: flex
+  z-index: 1
 
 .title h1
   opacity: none
@@ -704,7 +705,7 @@ p
   left: -300px
 
 .options
-  height: 3487px
+  height: auto
   width: 50%
   right: 0
   position: absolute
@@ -873,7 +874,7 @@ p
   position: relative
 
 .shopcon
-  height: auto
+  height: 250px
   width: 100%
   position: relative
   display: inline-flex
@@ -906,6 +907,7 @@ p
 
 .shop:hover
   opacity: 1
+  cursor: grab
 
 .shop h5
   height: auto
@@ -1301,3 +1303,39 @@ p
   width: auto
   position: relative
   color: white
+
+.finalorder
+  height: 600px
+  width: 1000px
+  position: absolute
+  top: 150px
+  left: 50px
+  background-color: black
+  border-radius: 25px
+
+.features
+  height: auto
+  width: auto
+  right: 50px
+  top: 10px
+  position: absolute
+
+.emailform
+  height: auto
+  width: 250px
+  position: absolute
+  display: block
+  bottom: 150px
+  right: 50px
+
+.orderdetails
+  height: auto
+  width: 400px
+  left: 25px
+  // border-bottom: 1px solid white
+
+.orderdetails h2
+  margin: 0 0 0
+
+.addedoptions
+  // border-bottom: 1px solid white
