--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -821,6 +821,7 @@ p
 .summary
   height: 620px
   width: 891px
+  left: 100px
   position: relative
   display: inline-flex
   flex-direction: row
@@ -875,7 +876,7 @@ p
 
 .shopcon
   height: 250px
-  width: 100%
+  width: auto
   position: relative
   display: inline-flex
   margin: auto
@@ -890,6 +891,7 @@ p
   height: 130px
   width: 283px
   top: 25px
+  left: 90px
   margin: 0 10px
   position: relative
   background-color: black
@@ -898,8 +900,7 @@ p
   color: white
   border-radius: 15px
   vertical-align: middle
-
-.shop
+  z-index: inherit
 
 .img
   position: relative
@@ -1313,11 +1314,16 @@ p
   background-color: black
   border-radius: 25px
 
+.carimg
+  position: absolute
+  left: 126px
+  top: 40px
+
 .features
   height: auto
   width: auto
   right: 50px
-  top: 10px
+  top: 20px
   position: absolute
 
 .emailform
@@ -1329,12 +1335,16 @@ p
   right: 50px
 
 .orderdetails
+  position: absolute
   height: auto
   width: 400px
-  left: 25px
-  // border-bottom: 1px solid white
+  left: 140px
+  top: 200px
+
 
 .orderdetails h2
+  left: 175px
+  top: 50px
   margin: 0 0 0
 
 .addedoptions
