--- a/public/views/cart.html
+++ b/public/views/cart.html
@@ -119,9 +119,10 @@ myEvent(chkevent, function(e) { // For >=IE7, Chrome, Firefox
 
   <h1 style="border-top: 1px solid">Shop {{vehicle.model}}</h1>
 <div class="shopcon">
-    <div class="shop">
+    <div class="shop"><a>
       <img class="img" src="../assets/imgs/caricon.png">
       <h5>LOCAL INVENTORY</h5>
+    </a>
     </div>
     <div class="shop">
       <img class="img" src="../assets/imgs/special-offers.png">
