--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -1017,12 +1017,11 @@ p
 .carmain h1
   margin: 0
 
-
 .front
   height: 855px
   width: 100vw
   position: relative
-  background: url("../assets/imgs/outback.JPG") no-repeat center center
+  background: url("../assets/imgs/bigoutbackback.JPG") no-repeat center center
   -webkit-background-size: cover
   -moz-background-size: cover
   background-size: cover
@@ -1064,7 +1063,7 @@ p
   height: 60px
   width: 240px
   top: 100px
-  background-color: rgba(255,255,255,0.25)
+  background-color: grey
   opacity: .8
   color: white
   font-weight: bold
