--- a/public/styles/style.sass
+++ b/public/styles/style.sass
@@ -68,14 +68,57 @@ body
   color: #333
 
 .subinfo
-  height: auto
-  width: 100px
+  height: 55px
+  width: 100%
   position: relative
-  font-size: 1.55rem
-  display: flex
+  font-size: 10px
+  display: inline-block
+  border: solid 1px black
+
+.subinfocar
+  height: 50px
+  width: 49%
+  position: relative
+  // font-size: 1.2rem
+  font-size: 10px
+  margin: 0
+  display: inline-block
+  // border: 1px solid black
+
+.subinfoprice
+  height: 50px
+  width: 24%
+  // border: 1px solid black
+  position: relative
+  display: inline-block
+  font-size: 10px
+  margin: 0
+
+.subinfoprice h3
+  margin: 0
+  font-size: 10px
+
+.subinfo h4
+  margin: 0
+
+.subinfompg
+  height: 50px
+  width: 24%
+  display: inline-block
+  margin: 0
+  // border: 1px solid black
 
 .subinfo h3
-  font-size: 1.2rem
+  margin: 0
+
+.carfeat
+  position: relative
+  top: 25px
+  left: 10px
+  // border: 1px solid black
+
+.carfeat li
+  margin: 5px
 
 .subaruhome
   margin: 11px 0 0 23px
