--- a/public/views/build-your-own.html
+++ b/public/views/build-your-own.html
@@ -7,7 +7,7 @@
 <div class="choose">
   <h3>Choose a Subaru to Build</h3>
   <div class="yearselector">
-  <h1>CURRENT YEAR</h1><h1>PREVIOUS YEAR</h1>
+  <!-- <h1>CURRENT YEAR</h1><h1>PREVIOUS YEAR</h1> -->
 </div>
 </div>
 
@@ -24,23 +24,27 @@
 
   <div class="modelequip">
       <div class="subinfo">
-        <h3>
-          {{car.year}}{{car.model}}
-        </h3>
-        <h3>
-          {{car.price}}
-        </h3>
-        <h3>
-          {{car.hmpg}}/{{car.cmpg}}
-        </h3>
+        <div class="subinfocar">
+          <h3>{{car.year}}{{car.model}}</h3>
+        </div>
+        <div class="subinfoprice">
+          <h4>Starting at</h4>
+          <h3>{{car.price}}*</h3>
+        </div>
+        <div class="subinfompg">
+          <h4>mog up to</h4>
+          <h3>{{car.hmpg}}/{{car.cmpg}}**</h3>
+        </div>
 
       </div>
-    <h1>
-      <li>{{car.feature1}}</li>
-      <li>{{car.feature2}}</li>
-      <li>{{car.feature3}}</li>
-      <li>{{car.feature4}}</li>
-    </h1>
+      <div class="carfeat">
+        <h1>
+          <li>{{car.feature1}}</li>
+          <li>{{car.feature2}}</li>
+          <li>{{car.feature3}}</li>
+          <li>{{car.feature4}}</li>
+        </h1>
+      </div>
     <div class="bottomcontent">
       <div class="modelbutton" ui-sref="accolades" style="border-right: 2px #EFEFEF solid">ACCOLADES</div>
       <div class="modelbutton" id="compare">COMPARE</div>
